--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -80,6 +80,10 @@
 }
 
 // Fix for dropdown
-.navbar .dropdown .dropdown-content {
-  line-height: 1.15;
+.navbar .dropdown {
+  z-index: $dropdown-zindex-navbar;
+
+  .dropdown-content {
+    line-height: 1.15;
+  }
 }
