--- a/src/scss/components/_sidenav.scss
+++ b/src/scss/components/_sidenav.scss
@@ -121,3 +121,7 @@
   z-index: 700;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+.sidenav .dropdown {
+  z-index: $dropdown-zindex-sidenav;
+}
